--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
-        <div class="section__content">
+        <div class="section-header">
           <h3 class="main__title">
             5 простых (на самом деле не очень) советов
           </h3>
