--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="icon" href="./images/favicon.ico" sizes="any" />
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
+    <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/dark.css" />
     <link rel="stylesheet" href="./styles/light.css" />
@@ -54,7 +54,7 @@
       </div>
     </header>
     <main class="main__container">
-      <section class="main__container__section">
+      <section class="main__container__section main__container__section__reason">
         <h2 class="section__title">Почему сосредоточиться так сложно</h2>
         <div class="section__content">
           <h3 class="main__title">Многозадачность</h3>
@@ -84,7 +84,7 @@
           </p>
         </div>
       </section>
-      <section class="main__container__section">
+      <section class="main__container__section main__container__section__decrease__concentration">
         <h2 class="section__title">Что снижает концентрацию внимания?</h2>
         <div class="section__content">
           <h3 class="main__title">Многозадачность</h3>
@@ -121,7 +121,7 @@
           </p>
         </div>
       </section>
-      <section class="main__container__section">
+      <section class="main__container__section main__container__section__how__concentration">
         <h2 class="section__title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
@@ -185,7 +185,7 @@
         </div>
       </section>
       <section class="main__img__section">
-        <h3 class="main__title">А можно в картинках?</h3>
+        <h2 class="main__title">А можно в картинках?</h2>
         <img
           class="img img__sunset"
           src="./images/sunset.png"
