--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
       </div>
     </header>
     <main class="main__container">
-      <section class="main__container__section main__container__section__reason">
+      <section
+        class="main__container__section main__container__section__reason"
+      >
         <h2 class="section__title">Почему сосредоточиться так сложно</h2>
         <div class="section__content">
           <h3 class="main__title">Многозадачность</h3>
@@ -84,7 +86,9 @@
           </p>
         </div>
       </section>
-      <section class="main__container__section main__container__section__decrease__concentration">
+      <section
+        class="main__container__section main__container__section__decrease__concentration"
+      >
         <h2 class="section__title">Что снижает концентрацию внимания?</h2>
         <div class="section__content">
           <h3 class="main__title">Многозадачность</h3>
@@ -121,7 +125,9 @@
           </p>
         </div>
       </section>
-      <section class="main__container__section main__container__section__how__concentration">
+      <section
+        class="main__container__section main__container__section__how__concentration"
+      >
         <h2 class="section__title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
